UI changes and Notes whitespace bug fixed

--- a/src/popup/HomePage.scss
+++ b/src/popup/HomePage.scss
@@ -1,17 +1,36 @@
-.homePage {
-  text-align: center;
-  margin: 10px;
+.home {
+  width: 171px;
+  height: fit-content;
 }
 
-.notes {
-    color: black;
-    font-size: initial;
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-}
-.notes:hover {
-  background-color: darkgrey;
+.mainDiv {
   cursor: pointer;
-  color: dimgrey;
+  width: 160px;
+  padding: 5px;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.mainDiv:hover {
+  border-radius: 5%;
+  background-color: #bdbdbd;
+}
+
+.leftImage {
+  float: left;
+  line-height: 16px;
+  width: 16px;
+  height: 16px;
+  padding-top: 2px;
+  margin-right: 8px;
+}
+
+.rightImage {
+  float: right;
+  line-height: 16px;
+  padding-top: 4px;
+  width: auto;
+  height: 14px;
+  margin-left: 5px;
+  margin-right: 2px;
 }
