--- a/src/popup/Popup.scss
+++ b/src/popup/Popup.scss
@@ -5,13 +5,11 @@
 $primary-color: darkblue;
 $background-color: #bada55;
 body {
-    background-color: #d9d7d7;
-    width: 300px;
+    background-color:#fae84859;
 }
 
 .backButton {
     margin-bottom: -4px;
-    width: 16px;
+    width: 24px;
     cursor: pointer;
-    padding-bottom: 2px;
 }
